test: rename test_daemon to test_lrs
We prepare the introduction of TLC tests by moving "Daemon" naming
in tests to "LRS".

Change-Id: I027864ca7f7309ff9a6801e2ea97e6b5035294af
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11660
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -42,9 +42,6 @@ check_PROGRAMS=test_fair_share \
                medium_locker
 
 check_SCRIPTS=acceptance.test \
-              test_daemon.sh \
-              test_daemon_monitoring.sh \
-              test_daemon_scheduling.test \
               test_delete.sh \
               test_extent_list.sh \
               test_fair_share.test \
@@ -55,6 +52,9 @@ check_SCRIPTS=acceptance.test \
               test_ldm.sh \
               test_locate.test \
               test_lock_clean.sh \
+              test_lrs.sh \
+              test_lrs_drive_status.sh \
+              test_lrs_scheduling.test \
               test_media.sh \
               test_object_list.sh \
               test_phobos_tape_library_test.sh \
