tlc: add socket creation
This patch adds the creation of a TCP socket by the TLC at startup.

Change-Id: I8f7f8c087174a6b920f4546da8f23ab4e3870213
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11704
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -187,3 +187,8 @@ drive_rw = LTO8_drive,LTO9_drive
 
 [tape_type "LTO9"]
 drive_rw = LTO9_drive
+
+# Tape Library Controler
+[tlc]
+hostname = localhost
+port = 20123
