tlc, cli: receive data and answer lrs ping
TLC reads input data and answers LRS ping request.

A new "phobos ping {phobosd|tlc}" CLI command is also added.

This LRS ping request will be replaced by the TLC ping request
as soon as the TLC protobuf protocol will be implemented in next
patches.

Change-Id: I5b645843f996aaf2b519414dc6a0f453934d3e01
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11715
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -4,6 +4,9 @@ sbin_PROGRAMS=tlc
 
 tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c
 tlc_CFLAGS=$(AM_CFLAGS)
-tlc_LDADD=../common/libpho_common.la ../communication/libpho_comm.la \
-          ../daemon/libpho_daemon.la
+tlc_LDADD=../cfg/libpho_cfg.la \
+          ../common/libpho_common.la \
+          ../communication/libpho_comm.la \
+          ../daemon/libpho_daemon.la \
+          ../serializer/libpho_serializer.la
 tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
