--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -60,7 +60,7 @@ check_SCRIPTS=acceptance.test \
               test_media.sh \
               test_object_list.sh \
               test_phobos_tape_library_test.sh \
-              test_ping.sh \
+              test_ping.test \
               test_put.sh \
               test_raid1_split.sh \
               test_resource_availability.sh \
