tlc: ping request without lib ping
Add the protobuf definition of a TLC ping request/response.
Use this message to ping the TLC. The TLC still answers
without any lib ping. The lib ping will be added in a next
patch.

Change-Id: I42a34b8bde841fdb56c9aa6744c57ddc4e94b4e3
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11757
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/serializer/Makefile.am
+++ b/src/serializer/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS= $(CC_OPT)
 
-noinst_LTLIBRARIES=libpho_serializer.la
+noinst_LTLIBRARIES=libpho_serializer.la libpho_serializer_tlc.la
 
 protodir=../proto
 proto_sources=proto_common.pb-c.c proto_lrs.pb-c.c
@@ -9,6 +9,13 @@ libpho_serializer_la_LIBADD=-lprotobuf-c
 
 $(proto_sources): $(protodir)/gen-proto.stamp
 srl_rls.lo: $(protodir)/gen-proto.stamp
+
+proto_tlc_sources=proto_tlc.pb-c.c
+libpho_serializer_tlc_la_SOURCES=srl_tlc.c $(proto_tlc_sources)
+libpho_serializer_tlc_la_LIBADD=-lprotobuf-c
+
+$(proto_tlc_sources): $(protodir)/gen-proto.stamp
+srl_tlc.lo: $(protodir)/gen-proto.stamp
 
 $(protodir)/gen-proto.stamp:
 	$(MAKE) -C $(protodir) gen-proto.stamp
