--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -5,5 +5,8 @@ lib_LTLIBRARIES=libphobos_admin.la
 
 libphobos_admin_la_SOURCES=admin.c admin_utils.h
 libphobos_admin_la_LIBADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la \
-			  ../common/libpho_common.la ../communication/libpho_comm.la \
-			  ../ldm/libpho_ldm.la ../serializer/libpho_serializer.la
+                          ../common/libpho_common.la \
+                          ../communication/libpho_comm.la \
+                          ../ldm/libpho_ldm.la \
+                          ../serializer/libpho_serializer.la \
+                          ../serializer/libpho_serializer_tlc.la
