--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,11 +1,11 @@
 SUFFIXES = .pb-c.h
 
 protodir=../proto
-proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h
+proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h pho_proto_tlc.pb-c.h
 noinst_HEADERS=pho_cfg.h pho_comm.h pho_common.h pho_daemon.h pho_dss.h \
 	       pho_io.h pho_layout.h pho_ldm.h pho_mapper.h \
 	       pho_module_loader.h pho_srl_common.h pho_srl_lrs.h \
-	       pho_type_utils.h pho_types.h slist.h \
+	       pho_srl_tlc.h pho_type_utils.h pho_types.h slist.h \
 	       $(proto_headers)
 
 # Required headers:
