ldm-scsi: add 'tape_full_threshold' in scsi config section
This patch introduces a new parameter to make the 5% threshold
configurable. This threshold determines the amount of free
space left to consider a tape full.

Change-Id: I2d139691cc909e9b07df5244de35c6e6bac0b69c
Signed-off-by: Augustin BOULARD <augustin.boulard.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11761
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -93,6 +93,10 @@ cmd_mount      = /usr/sbin/pho_ldm_helper mount_ltfs  "%s" "%s"
 cmd_umount     = /usr/sbin/pho_ldm_helper umount_ltfs "%s" "%s"
 cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 
+# Percentage of capacity reserved for updating the index.
+# Value goes from 1 to 100
+tape_full_threshold = 5
+
 [store]
 # default layout for put operations
 # default_layout = raid1
