--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -8,4 +8,6 @@ libphobos_admin_la_LIBADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la \
                           ../common/libpho_common.la \
                           ../communication/libpho_comm.la \
                           ../ldm/libpho_ldm.la \
-                          ../serializer/libpho_serializer.la
+                          ../import/libpho_import.la \
+                          ../serializer/libpho_serializer.la \
+                          ../serializer/libpho_serializer_tlc.la
