tape_import_tests: add tests for the tape import feature.
This patch adds tests concerning the tape import feature.
It has four different tests:
  - Reconstruction of an object
  - Version test
  - Status of an object
  - Stats of a media

Change-Id: I4cecac0e511de9dfe4f4e8f3af6ec8b1af2ef847
Signed-off-by: Alexis GULLO <alexis.gullo.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11815
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -53,6 +53,7 @@ check_SCRIPTS=acceptance.test \
               test_format.sh \
               test_get.sh \
               test_group_sync.sh \
+              test_import.test \
               test_ldm.sh \
               test_locate.test \
               test_lock_clean.sh \
