tlc : inquiry scsi command
The SCSI inquiry command is implemented to ping the library.

Change-Id: Ic75ed1d9571784f6d77ed3c0c6e894f20a529fcf
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11880
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -80,6 +80,8 @@ max_element_status = 0
 query_timeout_ms = 1000
 # timeout of a SCSI move request in ms
 move_timeout_ms = 300000
+# timeout of a SCSI inquiry request in ms
+inquiry_timeout_ms = 10
 
 [lib_scsi]
 # Query drive serial number and volume label as separate requests
