tape_import: add found files to the DSS
This patch uses the previously written functions to add the
found extents to the extent table.

Change-Id: Ie6a0286b76eb15016061b45226dd54417d353645
Signed-off-by: Alexis GULLO <alexis.gullo.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11970
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/import/Makefile.am
+++ b/src/import/Makefile.am
@@ -3,4 +3,6 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_import.la
 
 libpho_import_la_SOURCES=media_import.c
-libpho_import_la_CFLAGS=$(AM_CFLAGS) -I../admin
+libpho_import_la_LIBADD=../io-modules/libpho_io_adapter_posix.la
+libpho_import_la_CFLAGS=$(AM_CFLAGS) -I../admin -I../io-modules \
+						-I../layout-modules
