layout: raid5 module added
This commit adds primary functions for raid5 layout.

Change-Id: Ida2e40e9aa569dbbdae083f46aa611a20fb95c87
Signed-off-by: Augustin BOULARD <augustin.boulard.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11908
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -141,6 +141,7 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_libdir}/phobos/libpho_*_ltfs.so*
 %{_libdir}/phobos/libpho_*_posix.so*
 %{_libdir}/phobos/libpho_*_raid1.so*
+%{_libdir}/phobos/libpho_*_raid5.so*
 %{_libdir}/phobos/libpho_*_dummy.so*
 %{_libdir}/phobos/libpho_*_scsi.so*
 %{_sbindir}/pho_*_helper
