prod: refactor acceptance test for prod
Fix a few bugs when checking for EXEC_NONREGRESSION.

Also, introduce a way to give an explicit list of tapes when executed
outside of the non regression process.

Change-Id: I18c12ab391df0089e0dfbba3324c70b617c9eae3
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/11954
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/prod/Makefile.am
+++ b/tests/prod/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
 TEST_EXTENSIONS=.sh
-TESTS_ENVIRONMENT=export EXEC_NONREGRESSION;
+TESTS_ENVIRONMENT=export EXEC_NONREGRESSION=yes;
 
 check_SCRIPTS=acceptance.sh
 
