--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -42,6 +42,7 @@ check_PROGRAMS=test_fair_share \
                medium_locker
 
 check_SCRIPTS=acceptance.test \
+              test_compatible_drive_exists.test \
               test_delete.sh \
               test_extent_list.sh \
               test_fair_share.test \
