import: making functions that depend on the layout
This patch moves functions from the media_import.c file to raid1.c.
The goal is to make these functions dependant on the layout used.

Change-Id: I66c4d9676dec7178489e698cd6336c5a02294fbf
Signed-off-by: Alexis GULLO <alexis.gullo.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12023
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication module-loader ldm dss cfg \
-        daemon serializer ldm-modules io io-modules import layout store admin \
-        lrs layout-modules cli tlc
+        daemon serializer ldm-modules io io-modules import layout store \
+        layout-modules admin lrs cli tlc
