misc: change the RELEASE macro name in configure.ac
This patch changes the configure.ac macro RELEASE to PHOBOS_RELEASE so
that there is no conflict if a file includes scsi/sg_io_linux.h and
config.h, as they both define the RELEASE macro.

Change-Id: Iac60fc723c47d4ee77363d6a6354bed86de4246d
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12028
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -1,6 +1,6 @@
 Name:    @PACKAGE@
 Version: @VERSION@
-Release: @RELEASE@%{?dist}
+Release: @PHOBOS_RELEASE@%{?dist}
 Summary: Parallel Heterogeneous OBject-Oriented Storage
 
 Group:   Applications/System
