--- a/configure.ac
+++ b/configure.ac
@@ -5,10 +5,10 @@
 AC_PREREQ(2.59)
 
 AC_INIT([phobos], [1.94.1], [st-hpc@cea.fr])
-RELEASE="1"
+PHOBOS_RELEASE="1"
 
-AC_DEFINE_UNQUOTED(RELEASE, "$RELEASE", [release info])
-AC_SUBST(RELEASE)
+AC_DEFINE_UNQUOTED(PHOBOS_RELEASE, "$PHOBOS_RELEASE", [release info])
+AC_SUBST(PHOBOS_RELEASE)
 
 AC_CONFIG_AUX_DIR([autotools])
 AC_CONFIG_MACRO_DIR([autotools/m4])
