layout: raid5 response handler
This commit adds functions to handle responses and build requests
for raid like layouts.

Change-Id: I077517376d1a95be858b99b910c50db2af30c0b3
Signed-off-by: Augustin BOULARD <augustin.boulard.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12132
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/layout-modules/Makefile.am
+++ b/src/layout-modules/Makefile.am
@@ -10,6 +10,7 @@ libpho_layout_raid1_la_LIBADD=../store/libphobos_store.la
 libpho_layout_raid1_la_LDFLAGS=-version-info 0:0:0 -lxxhash
 
 libpho_layout_raid5_la_SOURCES=raid5.c
-libpho_layout_raid5_la_CFLAGS=-fPIC $(AM_CFLAGS)
-libpho_layout_raid5_la_LIBADD=../store/libphobos_store.la
+libpho_layout_raid5_la_CFLAGS=-fPIC $(AM_CFLAGS) -I ../layout
+libpho_layout_raid5_la_LIBADD=../store/libphobos_store.la \
+                              ../layout/libpho_layout_common.la
 libpho_layout_raid5_la_LDFLAGS=-version-info 0:0:0
