--- a/src/layout/Makefile.am
+++ b/src/layout/Makefile.am
@@ -1,8 +1,10 @@
 AM_CFLAGS= $(CC_OPT)
 
-noinst_LTLIBRARIES=libpho_layout.la
-
+noinst_LTLIBRARIES=libpho_layout.la libpho_layout_common.la
+noinst_HEADERS=raid_common.h
 # TODO noinst headers with modules internals that do not require to be exposed
 # to the rest of the application.
 
 libpho_layout_la_SOURCES=layout.c
+
+libpho_layout_common_la_SOURCES=raid_common.c
