rpm: add pho_cfg.h to installed files
phobos_admin.h header loads pho_dss.h which loads pho_cfg.h

Change-Id: I2da2ce174ecb5938e0e9dc47fe80190484295fee
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12139
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Augustin Boulard <augustin.boulard.ocre@cea.fr>

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -12,8 +12,8 @@ noinst_HEADERS=pho_cfg.h pho_comm.h pho_common.h pho_daemon.h pho_dss.h \
 #   - phobos_store.h  main program interface
 #   - phobos_admin.h  admin command interface
 #   - pho_attrs.h     access and manipulate object metadata
-include_HEADERS=pho_attrs.h pho_comm.h pho_common.h pho_dss.h pho_types.h \
-                phobos_store.h phobos_admin.h
+include_HEADERS=pho_attrs.h pho_cfg.h pho_comm.h pho_common.h pho_dss.h \
+                pho_types.h phobos_store.h phobos_admin.h
 
 $(proto_headers): $(protodir)/gen-proto.stamp
 
