--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -163,6 +163,7 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %files devel
 
 %{_includedir}/pho_attrs.h
+%{_includedir}/pho_cfg.h
 %{_includedir}/pho_comm.h
 %{_includedir}/pho_common.h
 %{_includedir}/pho_dss.h
