tlc: manage open/close of library status
The TLC will cache the library status. This patch adds the library
status load at open and the library status clean at close.

Change-Id: I779243a2fde1b8ee64bf81d445c6b109aa3946fa
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12183
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -2,7 +2,8 @@ AM_CFLAGS= $(CC_OPT)
 
 sbin_PROGRAMS=tlc
 
-tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c ../ldm-modules/scsi_api.h
+tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
+            ../ldm-modules/scsi_api.h
 tlc_CFLAGS=$(AM_CFLAGS)
 tlc_LDADD=../cfg/libpho_cfg.la \
           ../common/libpho_common.la \
