--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -44,6 +44,7 @@ check_PROGRAMS=test_fair_share \
 check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
               test_delete.sh \
+              test_drive_lookup.test \
               test_extent_list.sh \
               test_fair_share.test \
               test_file_after_put.test \
