tlc: add load command
The command is added to the TLC, the TLC protocol, the admin API
and the CLI.

Change-Id: I15406bc3141406ea48a6b23dad8e9c091d32b871
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12218
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -67,6 +67,7 @@ check_SCRIPTS=acceptance.test \
               test_resource_availability.sh \
               test_resource_management.sh \
               test_tlc.test \
+              test_tlc_load.test \
               test_undelete.sh \
               test_unload_with_source_set_to_drive.test \
               test_unlock_at_unload.test
