spec: add libattr-devel require to phobos-devel
attr/xattr.h is included in pho_cfg.h, which is included in
pho_dss.h, which included in phobos_admin.h .

Using phobos_admin.h through the package phobos-devel requires
attr/xattr.h provided by the libattr-devel package.
(This bug was generated by the compilation of the lhsmtool_phobos
package.)

Change-Id: I3f6ffa87bfde3607042a793dc785ac23b414f6e2
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12202
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -30,9 +30,9 @@ BuildRequires: %{postgres_prefix}-devel
 BuildRequires: glib2-devel >= 2.28
 BuildRequires: %{python_prefix}-devel
 BuildRequires: jansson-devel >= 2.5
+BuildRequires: libattr-devel
 BuildRequires: libini_config-devel
 BuildRequires: openssl-devel
-BuildRequires: libattr-devel
 BuildRequires: sg3_utils-devel
 BuildRequires: protobuf-c-devel
 BuildRequires: systemd
@@ -76,6 +76,7 @@ Summary: C API for Phobos Object Store.
 Requires: phobos
 Requires: glib2-devel >= 2.28
 Requires: jansson-devel >= 2.5
+Requires: libattr-devel
 
 %description devel
 This package contains header files and required libraries to access Phobos
