packaging: add 1.95-2 changelog in spec file
New ocean revision 1.95-2 needs to be documented into the
changelog of the specfile.

Change-Id: Iffa524f97b5796991a84d615141986f311d2556d
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12209
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -186,6 +186,9 @@ ldconfig
 %endif
 
 %changelog
+* Thu Oct 19 2023 - Patrice Lucas <patrice.lucas@cea.fr> - 1.95-2
+- Phobos-devel requires libattr-devel
+
 * Thu Sep 21 2023 - Yoann Valeri <yoann.valeri@cea.fr> - 1.95-1
 - Release 1.95 (Tethys)
 - WARNING: the db schema moves from 1.93 to 1.95 and a migration is needed.
