--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -39,6 +39,7 @@ check_PROGRAMS=test_attrs \
                test_common \
                test_communication \
                test_dev_tape \
+               test_dss_extent \
                test_dss_lazy_find_object \
                test_dss_lock \
                test_dss_logs \
@@ -81,6 +82,10 @@ test_communication_CFLAGS=$(AM_CFLAGS) -I..
 test_dev_tape_SOURCES=test_dev_tape.c
 test_dev_tape_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB) $(SCSI_TAPE_LIB)
 test_dev_tape_CFLAGS=$(AM_CFLAGS) -I..
+
+test_dss_extent_SOURCES=test_dss_extent.c ../test_setup.c ../test_setup.h
+test_dss_extent_LDADD=$(DSS_LIB) $(ADMIN_LIB) $(CFG_LIB) $(COMMON_LIB)
+tess_dss_extent_CFLAGS=$(AM_CFLAGS)
 
 test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c ../test_setup.c \
                                   ../test_setup.h
