pkg: update to 1.95.1
Change-Id: Ieb26eeb2efa2bd5f6457aa9bead0743ae60f15d3
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12397
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -186,6 +186,14 @@ ldconfig
 %endif
 
 %changelog
+* Fri Nov 24 2023 - Patrice Lucas <patrice.lucas@cea.fr> - 1.95.1-1
+- ltfs: improve ltfs log with serial number
+- ltfs: return an error if labels are different at mount operation
+- store, admin, cli: fix store and admin global context share
+- LRS : fix unloading a tape from a source which is not a slot
+- compilation : fix gcc compilation warning on RHEL 9 based system
+- doc : add documentation for the currently_dedicated_to option
+
 * Thu Oct 19 2023 - Patrice Lucas <patrice.lucas@cea.fr> - 1.95-2
 - Phobos-devel requires libattr-devel
 
