ltfs: add logs to the dev_mount function
This patch adds logs to the dev_mount function in the LRS. It is similar
to the work done for the SCSI logs, but here the File System adapter
LTFS is modified, specifically the "ltfs_mount" function (which is
called by dev_mount"). The other calls in dev_mount will be updated
aswell.

Alongside these modifications, this patch creates a new schema for the
2.0 with the relevant operation type added ("device mount") and a first
test of the "ltfs_mount" function. It is done similarly to the SCSI logs
test, in that we add mocking function in the Phobos context that will be
called by "ltfs_mount". They normally are the function of the old
version, but are modified in the test to fail when called.

Change-Id: I94e5aef6d9b3457e13d7a91ab57047af3dd99449
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12414
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -52,6 +52,7 @@ check_PROGRAMS=test_attrs \
                test_lrs_cfg \
                test_lrs_device \
                test_lrs_scheduling \
+               test_ltfs_logs \
                test_mapper \
                test_phobos_admin_medium_locate \
                test_ping \
@@ -145,11 +146,11 @@ test_lrs_scheduling_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
                           $(SERIALIZER_LIB) $(CFG_LIB) $(IO_LIB) $(COMMON_LIB)
 test_lrs_scheduling_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 
-test_scsi_logs_SOURCES=test_scsi_logs.c ../test_setup.c ../test_setup.h
-test_scsi_logs_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
+test_ltfs_logs_SOURCES=test_ltfs_logs.c ../test_setup.c ../test_setup.h
+test_ltfs_logs_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
                      $(CFG_LIB) $(IO_LIB) $(COMMON_LIB) $(SCSI_LIB) \
                      $(LDM_SCSI_LIB) $(ADMIN_LIB) $(DAEMON_LIB)
-test_scsi_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
+test_ltfs_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
 
 test_mapper_SOURCES=test_mapper.c
 test_mapper_LDADD=$(STORE_LIB) $(MAPPER_LIB)
@@ -164,6 +165,12 @@ test_phobos_admin_medium_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss
 test_ping_SOURCES=test_ping.c mock_communication.c
 test_ping_LDADD=$(ADMIN_LIB) $(COMMON_LIB) $(DSS_LIB) $(LDM_LIB)
 test_ping_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/admin
+
+test_scsi_logs_SOURCES=test_scsi_logs.c ../test_setup.c ../test_setup.h
+test_scsi_logs_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
+                     $(CFG_LIB) $(IO_LIB) $(COMMON_LIB) $(SCSI_LIB) \
+                     $(LDM_SCSI_LIB) $(ADMIN_LIB) $(DAEMON_LIB)
+test_scsi_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
 
 # TODO: try to link against the phobos_store library instead of
 # the store_alias object file
