tests: create test utils library
This patch adds the creation of the test utils library that will be used
by multiple tests, avoiding duplicate code and recompiling the same code
multiple times.

Change-Id: Iba5ece3a56ab0cdf372040687e991b80a5994193
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12424
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
-SUBDIRS=. src tests/externs/api tests/externs/cli tests/interns tests/prod \
-        tape_library_certification
+SUBDIRS=. src tests tests/externs/api tests/externs/cli tests/interns \
+        tests/prod tape_library_certification
 
 rpm_dir=`pwd`/rpms
 
