--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -26,6 +26,10 @@ LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
 SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
 STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 
+TESTS_LIB_DEPS=$(LRS_LIB) $(LDM_LIB) $(IO_LIB) $(DSS_LIB) $(SERIALIZER_LIB) \
+               $(CFG_LIB) $(COMMON_LIB) $(DAEMON_LIB)
+TESTS_LIB=../libpho_test_utils.la
+
 if VALGRIND_ENABLED
 @VALGRIND_CHECK_RULES@
 VALGRIND_SUPPRESSIONS_FILES=../supp-files/valgrind.supp ../supp-files/glib.supp
@@ -65,112 +69,105 @@ check_PROGRAMS=test_attrs \
 TESTS=$(check_PROGRAMS)
 
 test_attrs_SOURCES=test_attrs.c
-test_attrs_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_attrs_LDADD=$(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_attrs_CFLAGS=$(AM_CFLAGS) -I..
 
 test_cfg_SOURCES=test_cfg.c
-test_cfg_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_cfg_LDADD=$(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_cfg_CFLAGS=$(AM_CFLAGS) -I..
 
 test_common_SOURCES=test_common.c
-test_common_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_common_LDADD=$(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_common_CFLAGS=$(AM_CFLAGS) -I..
 
 test_communication_SOURCES=test_communication.c
-test_communication_LDADD=$(COMMUNICATION_LIB) $(CFG_LIB) $(COMMON_LIB)
+test_communication_LDADD=$(COMMUNICATION_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_communication_CFLAGS=$(AM_CFLAGS) -I..
 
 test_dev_tape_SOURCES=test_dev_tape.c
-test_dev_tape_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB) $(SCSI_TAPE_LIB)
+test_dev_tape_LDADD=$(SCSI_TAPE_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_dev_tape_CFLAGS=$(AM_CFLAGS) -I..
 
-test_dss_extent_SOURCES=test_dss_extent.c ../test_setup.c ../test_setup.h
-test_dss_extent_LDADD=$(DSS_LIB) $(ADMIN_LIB) $(CFG_LIB) $(COMMON_LIB)
+test_dss_extent_SOURCES=test_dss_extent.c
+test_dss_extent_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 tess_dss_extent_CFLAGS=$(AM_CFLAGS)
 
-test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c ../test_setup.c \
-                                  ../test_setup.h
-test_dss_lazy_find_object_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                                $(ADMIN_LIB) $(LDM_LIB)
+test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c
+test_dss_lazy_find_object_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_dss_lazy_find_object_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/store
 
-test_dss_lock_SOURCES=test_dss_lock.c ../test_setup.c ../test_setup.h
-test_dss_lock_LDADD=$(DSS_LIB) $(ADMIN_LIB) $(CFG_LIB) $(COMMON_LIB) $(LDM_LIB)
-test_dss_lock_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss
+test_dss_lock_SOURCES=test_dss_lock.c
+test_dss_lock_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_dss_lock_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I..
 
-test_dss_logs_SOURCES=test_dss_logs.c ../test_setup.c ../test_setup.h
-test_dss_logs_LDADD=$(DSS_LIB) $(ADMIN_LIB) $(CFG_LIB) $(COMMON_LIB) $(LDM_LIB)
-test_dss_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss
+test_dss_logs_SOURCES=test_dss_logs.c
+test_dss_logs_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_dss_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I..
 
-test_dss_medium_locate_SOURCES=test_dss_medium_locate.c ../test_setup.c \
-                               ../test_setup.h
-test_dss_medium_locate_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB) $(ADMIN_LIB) \
-                             $(LDM_LIB)
-test_dss_medium_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss
+test_dss_medium_locate_SOURCES=test_dss_medium_locate.c
+test_dss_medium_locate_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_dss_medium_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I..
 
-test_dss_object_move_SOURCES=test_dss_object_move.c ../test_setup.c \
-                             ../test_setup.h
-test_dss_object_move_LDADD=$(DSS_LIB) $(ADMIN_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                           $(LDM_LIB)
+test_dss_object_move_SOURCES=test_dss_object_move.c
+test_dss_object_move_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_dss_object_move_CFLAGS=$(AM_CFLAGS) -I..
 
 test_io_SOURCES=test_io.c
-test_io_LDADD=$(IO_LIB) $(COMMON_LIB) $(IO_POSIX_LIB) $(CFG_LIB)
+test_io_LDADD=$(IO_POSIX_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_io_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/io-modules -I..
 if RADOS_ENABLED
-test_io_LDADD+=$(LDM_LIB) $(ADMIN_LIB)
+test_io_LDADD+=$(ADMIN_LIB)
 endif
 
 test_layout_module_SOURCES=test_layout_module.c
-test_layout_module_LDADD=$(LAYOUT_LIB) $(RAID1_LIB) $(CFG_LIB) $(COMMON_LIB) -ldl
+test_layout_module_LDADD=$(LAYOUT_LIB) $(RAID1_LIB) $(CFG_LIB) $(COMMON_LIB) \
+                         -ldl
 test_layout_module_CFLAGS=$(AM_CFLAGS) -I..
 
 test_ldm_SOURCES=test_ldm.c
-test_ldm_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB) $(FS_POSIX_LIB)
+test_ldm_LDADD=$(FS_POSIX_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_ldm_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/ldm-modules -I..
 
 test_log_SOURCES=test_log.c
-test_log_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_log_LDADD=$(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_log_CFLAGS=$(AM_CFLAGS) -I..
 
 test_lrs_cfg_SOURCES=test_lrs_cfg.c
 test_lrs_cfg_LDADD=$(LRS_LIB) $(CFG_LIB) $(COMMON_LIB)
 test_lrs_cfg_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
 
-test_lrs_device_SOURCES=test_lrs_device.c ../test_setup.h ../test_setup.c
-test_lrs_device_LDADD=$(LRS_LIB) $(DSS_LIB) $(COMMON_LIB) \
-                      $(ADMIN_LIB) $(LDM_LIB) $(IO_LIB)
+test_lrs_device_SOURCES=test_lrs_device.c
+test_lrs_device_LDADD=$(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_lrs_device_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I..
 
 test_lrs_scheduling_SOURCES=test_lrs_scheduling.c
 test_lrs_scheduling_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
-                          $(SERIALIZER_LIB) $(CFG_LIB) $(IO_LIB) $(COMMON_LIB)
-test_lrs_scheduling_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs
+                          $(SERIALIZER_LIB) $(CFG_LIB) $(IO_LIB) $(COMMON_LIB) \
+                          $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_lrs_scheduling_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I..
 
-test_ltfs_logs_SOURCES=test_ltfs_logs.c ../test_setup.c ../test_setup.h
-test_ltfs_logs_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
-                     $(CFG_LIB) $(IO_LIB) $(COMMON_LIB) $(SCSI_LIB) \
-                     $(LDM_SCSI_LIB) $(ADMIN_LIB) $(DAEMON_LIB)
-test_ltfs_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
+test_ltfs_logs_SOURCES=test_ltfs_logs.c
+test_ltfs_logs_LDADD=$(MOD_LOAD_LIB) $(SCSI_LIB) $(LDM_SCSI_LIB) $(ADMIN_LIB) \
+                     $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_ltfs_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules -I..
 
 test_mapper_SOURCES=test_mapper.c
-test_mapper_LDADD=$(STORE_LIB) $(MAPPER_LIB)
+test_mapper_LDADD=$(STORE_LIB) $(MAPPER_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_mapper_CFLAGS=$(AM_CFLAGS) -I..
 
-test_phobos_admin_medium_locate_SOURCES=test_phobos_admin_medium_locate.c \
-                                        ../test_setup.c ../test_setup.h
-test_phobos_admin_medium_locate_LDADD=$(ADMIN_LIB) $(DSS_LIB) $(CFG_LIB) \
-                                      $(COMMON_LIB) $(LDM_LIB)
-test_phobos_admin_medium_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss
+test_phobos_admin_medium_locate_SOURCES=test_phobos_admin_medium_locate.c
+test_phobos_admin_medium_locate_LDADD=$(ADMIN_LIB) $(TESTS_LIB) \
+                                      $(TESTS_LIB_DEPS)
+test_phobos_admin_medium_locate_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I..
 
 test_ping_SOURCES=test_ping.c mock_communication.c
 test_ping_LDADD=$(ADMIN_LIB) $(COMMON_LIB) $(DSS_LIB) $(LDM_LIB)
 test_ping_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/admin
 
-test_scsi_logs_SOURCES=test_scsi_logs.c ../test_setup.c ../test_setup.h
-test_scsi_logs_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
-                     $(CFG_LIB) $(IO_LIB) $(COMMON_LIB) $(SCSI_LIB) \
-                     $(LDM_SCSI_LIB) $(ADMIN_LIB) $(DAEMON_LIB)
-test_scsi_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules
+test_scsi_logs_SOURCES=test_scsi_logs.c
+test_scsi_logs_LDADD=$(MOD_LOAD_LIB) $(SCSI_LIB) $(LDM_SCSI_LIB) $(ADMIN_LIB) \
+                     $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_scsi_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules -I..
 
 # TODO: try to link against the phobos_store library instead of
 # the store_alias object file
@@ -183,10 +180,11 @@ test_store_object_md_SOURCES=test_store_object_md.c
 test_store_object_md_LDADD=$(STORE_LIB)
 test_store_object_md_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/dss -I$(TO_SRC)/store
 
-test_store_object_md_get_SOURCES=test_store_object_md_get.c ../test_setup.c
-test_store_object_md_get_LDADD=$(STORE_LIB) $(ADMIN_LIB)
-test_store_object_md_get_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/store
+test_store_object_md_get_SOURCES=test_store_object_md_get.c
+test_store_object_md_get_LDADD=$(STORE_LIB) $(ADMIN_LIB) $(TESTS_LIB) \
+                               $(TESTS_LIB_DEPS)
+test_store_object_md_get_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/store -I..
 
 test_type_utils_SOURCES=test_type_utils.c
-test_type_utils_LDADD=$(CFG_LIB) $(COMMON_LIB)
+test_type_utils_LDADD=$(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_type_utils_CFLAGS=$(AM_CFLAGS) -I..
