ltfs: add command call mock test
This patch adds a test to check a command call failure create a log in
the DSS as expected.

Change-Id: I7e4e1be42590b7dd774232e3d1a7221db116973c
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12427
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -20,6 +20,7 @@ SCSI_LIB=$(TO_SRC)/ldm-modules/libpho_scsi.la
 LDM_SCSI_LIB=$(TO_SRC)/ldm-modules/libpho_lib_adapter_scsi.la
 SCSI_TAPE_LIB=$(TO_SRC)/ldm-modules/libpho_dev_adapter_scsi_tape.la
 FS_POSIX_LIB=$(TO_SRC)/ldm-modules/libpho_fs_adapter_posix.la
+FS_LTFS_LIB=$(TO_SRC)/ldm-modules/libpho_fs_adapter_ltfs.la
 IO_POSIX_LIB=$(TO_SRC)/io-modules/libpho_io_adapter_posix.la
 MAPPER_LIB=$(TO_SRC)/io-modules/libpho_mapper.la
 LRS_LIB=$(TO_SRC)/lrs/libpho_lrs.la
@@ -147,8 +148,8 @@ test_lrs_scheduling_LDADD=$(LRS_LIB) $(LDM_LIB) $(MOD_LOAD_LIB) $(DSS_LIB) \
 test_lrs_scheduling_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I..
 
 test_ltfs_logs_SOURCES=test_ltfs_logs.c
-test_ltfs_logs_LDADD=$(MOD_LOAD_LIB) $(SCSI_LIB) $(LDM_SCSI_LIB) $(ADMIN_LIB) \
-                     $(TESTS_LIB) $(TESTS_LIB_DEPS)
+test_ltfs_logs_LDADD=$(MOD_LOAD_LIB) $(SCSI_LIB) $(LDM_SCSI_LIB) \
+                     $(FS_LTFS_LIB) $(ADMIN_LIB) $(TESTS_LIB) $(TESTS_LIB_DEPS)
 test_ltfs_logs_CFLAGS=$(AM_CFLAGS) -I$(TO_SRC)/lrs -I$(TO_SRC)/ldm-modules -I..
 
 test_mapper_SOURCES=test_mapper.c
