--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -68,6 +68,7 @@ check_SCRIPTS=acceptance.test \
               test_resource_management.sh \
               test_tlc.test \
               test_tlc_load_unload.test \
+              test_tlc_status.test \
               test_undelete.sh \
               test_unload_with_source_set_to_drive.test \
               test_unlock_at_unload.test
