tlc: add tlc.service to the rpm and network dependencies
This patch adds the tlc service file to installed files.

We also add the dependency of the tlc service to the
network one.

Change-Id: I4a923f86356456c11edda1d24719bbb59b01ceed
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12449
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -156,6 +156,7 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_sbindir}/phobos_tape_library_test.bash
 %{_sbindir}/phobos_tape_library_mtx_test.bash
 %{_sbindir}/tlc
+%{_unitdir}/tlc.service
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
 %dir %{phobosdocdir}
