--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -2,6 +2,11 @@ AM_CFLAGS= $(CC_OPT)
 
 sbin_PROGRAMS=tlc
 
+unitdir=`pkg-config systemd --variable=systemdsystemunitdir`
+unit_files=tlc.service
+unit_DATA=$(unit_files)
+EXTRA_DIST=$(unit_files)
+
 tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
             ../ldm-modules/scsi_api.h
 tlc_CFLAGS=$(AM_CFLAGS)
