ldm: use tlc at load/unload
This patch begins to introduce the use of TLC in the SCSI library
driver module. We first move lrs device load/unload of one tape
from local SCSI commands to TLC requests.

This patch removes three tests that are now too dependent from
the TLC : src/cli/tests/PhobosLDMTest.py,
tests/interns/test_ltfs_logs.c and
tests/interns/test_scsi_logs.c .

Change-Id: I1605440cf98efaded5f398599f2376cd42970aec
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/12538
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication module-loader ldm dss cfg \
-        daemon ldm-modules io io-modules layout serializer store admin lrs \
+        daemon serializer ldm-modules io io-modules layout store admin lrs \
         layout-modules cli tlc
